--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <html>
 	<head>
 		<title>Ahmed Osman Portfolio</title>
+		<link rel="icon" type="image/png" href="images/ao.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -40,8 +42,10 @@
 							<li><a href="generic.html">Courses and Certificates</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label"></span></a></li>
+							<li><a href="mailto:a.3osman229@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://wa.me/201556377531" class="icon brands alt fa-whatsapp" target="_blank"><span class="label"></span></a></li>
 						</ul>
 					</nav>
 
@@ -163,18 +167,17 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p>(+20) 1556377531</p>
+								<p>(+20)1556377531</p>
 							</section>
 							<section>
 								<h3>Email</h3>
 								<p>a.3osman229@gmail.com</p>
 							</section>
-
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label"></span></a></li>
+									<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label"></span></a></li>
 								</ul>
 							</section>
 						</section>
