--- a/generic.html
+++ b/generic.html
@@ -7,10 +7,12 @@
 <html>
 	<head>
 		<title>Ahmed Osman Portfolio</title>
+		<link rel="icon" type="image/png" href="images/ao.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -39,8 +41,10 @@
 							<li class="active"><a href="generic.html">Courses and Certificates</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label"></span></a></li>
+							<li><a href="mailto:a.3osman229@gmail.com" class="icon solid alt fa-envelope" target="_blank"><span class="label"></span></a></li>
+							<li><a href="https://wa.me/201556377531" class="icon brands alt fa-whatsapp" target="_blank"><span class="label"></span></a></li>
 						</ul>
 					</nav>
 
@@ -54,14 +58,15 @@
 										<h2>Google Data Analytics<br /></a></h2>
 									</header>
 									<a href="certificates/GoogleCertificate.pdf" class="image fit" target="_blank">
-										<img src="images/Google Certificate.png" alt="Google Data Analytics Certificate"/></a>
+									<img src="images/Google Certificate.png" alt=""/></a>
 								</article>
 
 								<article>
 									<header>
 										<h2>DEPI<br /></a></h2>
 									</header>
-									<a href="certificates/DEPI.pdf" class="image fit" target="_blank"><img src="images/DEPI.png" alt=""/></a>
+									<a href="certificates/DEPI.pdf" class="image fit" target="_blank">
+									<img src="images/DEPI.png" alt=""/></a>
 								</article>
 							</section>
 					</div>
@@ -85,8 +90,8 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/osmanalyst/" class="icon brands alt fa-linkedin" target="_blank"><span class="label"></span></a></li>
+								<li><a href="https://github.com/Osmanalyst" class="icon brands alt fa-github" target="_blank"><span class="label"></span></a></li>
 							</ul>
 						</section>
 					</section>
